--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "verilog.linting.iverilog.runAtFileLocation": true
+  "verilog.linting.iverilog.runAtFileLocation": true,
+  "verilog.linting.linter": "iverilog"
 }
